adding capital value

--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                                 Iglesia Alianza Cristiana y Misionera Ebenezer is a community of believers who come together to worship God and grow in our faith in Jesus Christ. Our mission is to glorify God by making disciples of Jesus through various means such as worship services, fellowship events, and Bible studies. We also strive to serve and reach out to our local community and the world, sharing the love and message of Jesus with others. Whether you are a long-time follower of Christ or just beginning your journey, you are welcome to join us as we seek to deepen our relationship with God and love and serve others.
                                 </p>
 
-                                <p>
-                                We're in the process of a major rebrand. We are working hard to implement a new system. Please check back in couple of days.                      
+                                <p class="lead">
+                                The leadership of Iglesia Alianza Cristiana y Misionera Ebenezer is committed to providing its members with a safe and comfortable place to worship, learn, and connect. To that end, we are embarking on several exciting capital improvement projects aimed at modernizing our facilities and enhancing their functionality. These projects include upgrades to our electrical and plumbing systems, installation of security cameras, and a complete renovation of our sanctuary, including new lighting and audio-visual systems. These improvements will not only enhance the beauty of our church but will also serve to increase its overall value and ensure that it remains a vibrant center of spiritual life for years to come.                 
                                 </p>
 
                                 <!-- <div class="row">
@@ -312,12 +312,12 @@
                                     </div>
                                 </div>
 
-                                <p class="tab-content__item-bottom">
+                                <!-- <p class="tab-content__item-bottom">
                                     <a href="mailto:hello@iglesiaebenezeracym.com" class="contact-email">hello@iglesiaebenezeracym.com</a>
                                     <span class="contact-number"> 
                                         <a href="tel:+17187291944">+1(718)-729-1944</a> 
                                     </span>
-                                </p>
+                                </p> -->
 
                             </div>
                         </div>
