--- a/spanish.html
+++ b/spanish.html
@@ -122,7 +122,7 @@
             <!-- <button type="button" class="btn--stroke btn--small ss-modal-trigger">
                 Notify Me
             </button> -->
-            <a href="index.html">
+            <a href="/">
                 <button type="button" class="btn--stroke btn--small ss-modal-trigger">
                     English
                 </button>
