feat: removining timer from cover

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 & amazing for you.
                 </h1>
 
-                <div class="s-intro__content-bottom">
+                <!-- <div class="s-intro__content-bottom">
 
                     <div class="s-intro__content-bottom-block">
                         <h5>Launching in</h5>
@@ -96,10 +96,11 @@
                                 <span class="ss-seconds">00</span>
                                 <span>S</span>
                             </div>
-                        </div>  
+                        </div>  -->
                     <!-- end counter -->
 
-                    </div> <!-- end s-intro-content__bottom-block -->
+                   <!---- </div>  -->
+                    <!-- end s-intro-content__bottom-block -->
 
                     <div class="s-intro__content-bottom-block">
 
