--- a/spanish.html
+++ b/spanish.html
@@ -69,12 +69,12 @@
                 </div>
 
                 <h1 class="text-huge-title">
-                Nos estamos preparando<br>
+                Estamos preparando<br>
                 algo excitante y<br>
                 sorprendente para ti.
                 </h1>
 
-                <div class="s-intro__content-bottom">
+                <!-- <div class="s-intro__content-bottom">
 
                     <div class="s-intro__content-bottom-block">
                         <h5>Lanzamiento en</h5>
@@ -96,10 +96,11 @@
                                 <span class="ss-seconds">00</span>
                                 <span>S</span>
                             </div>
-                        </div>  
+                        </div>   -->
                     <!-- end counter -->
 
-                    </div> <!-- end s-intro-content__bottom-block -->
+                    <!-- </div> -->
+                    <!-- end s-intro-content__bottom-block -->
 
                     <div class="s-intro__content-bottom-block">
 
